# hash-breaker

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
scripts/: check.sh  pre-commit.sh  quick-check.sh
src/: brute_force.rs  config.rs  file_utils.rs  hashing.rs  lib.rs  main.rs  telemetry.rs  utils.rs
tests/: test_brute_force.rs  test_hashing.rs
